--- a/.gitignore
+++ b/.gitignore
@@ -225,4 +225,4 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/intellij
 
 .idea/**/checkstyle-idea.xml
-example.xml
+pom.xml
